# 433-project

./: .gitignore  CMakeLists.txt  README.md  gyroCommand.txt
app/: CMakeLists.txt
app/include/: network.h
app/src/: main.c  network.c
as3-server/lib/: udp_server.js
as3-server/public/: index.html
as3-server/public/javascripts/: beatbox_ui.js
clientplswork/: clientplswork.js  package-lock.json  package.json
hal/include/: forceSensor.h  hardwareCommands.h  icm20948.h  lightSensor.h  motionSensor.h
hal/src/: accelerometer.c  forceSensor.c  hardwareCommands.c  icm20948.c  joystick.c  lightSensor.c  motionSensor.c
hal/src/output/: accelerometer
plswork/: clientplswork.js  package-lock.json  package.json  serverplswork.js
src/: lightSensor.c
udpRelay/: Makefile  package-lock.json  server.js
udpRelay/lib/: udp_server.js
udpRelay/public/: index.html
udpRelay/public/javascripts/: availability_page.js  beatbox_ui.js  udp_ui.js
udpRelay/public/stylesheets/: style.css
udpServer/: Makefile
udpServer/10-DynamicServer/: Makefile  server.js
udpServer/10-HttpsProcTimer/: Makefile  server.js
udpServer/10-StaticServer/: .cproject  Makefile  server.js
udpServer/10-StaticServer/public/: index.html
udpServer/10-StaticServer/public/javascripts/: code.js
udpServer/10-StaticServer/public/stylesheets/: style.css
washroom-server/: package.json  server.js
washroom-server/lib/: udp_server.js
